objects/zkmulti__ShipmateGeneralSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Deprecated</description>
    <fields>
        <fullName>zkmulti__Allow_Edit_of_Used_Custom_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Edit of Used Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Allow_Guest_User_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Guest User Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Boxing_Algorithm_Show_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Products in Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ConvertNonAscii__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert non ascii characters for labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Debug_ZK_API_Calls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug ZK API Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeleteCheckpointsAfterDelivered__c</fullName>
        <description>Delete Checkpoints After Shipment Delivered After X Days</description>
        <inlineHelpText>Delete Checkpoints After Shipment Delivered After X Days</inlineHelpText>
        <label>Delete Checkpoints After Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__DisableRateShipForInvalidAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Rate/Shipment Generation for Invalid Address (FedEx)</description>
        <inlineHelpText>Disable Rate/Shipment Generation for Invalid Address (FedEx)</inlineHelpText>
        <label>Disable Rate/Ship for Invalid Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Enable_Dynamic_Fill_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Dynamic Fill Fields: dynamically found fields by id from URL parameters for wizard page</description>
        <label>Enable Dynamic Fill Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Enable_Zk_Api__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Zk Api</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__FedExAllowAccountNumberTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Account Number for Tracking (FedEx)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__IgnoreAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UPS only</description>
        <inlineHelpText>UPS only</inlineHelpText>
        <label>Ignore Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__IgnoreMaxJobLimitForScheduledTrack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Max Job Limit for Scheduled Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ModifyZKObjects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modify ZK Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__NumberOfCommercialDocumentPrints__c</fullName>
        <label>Number of Commercial Document Prints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__OnlyAllowValidatedShipments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only Allow Validated Shipments (FedEx)</description>
        <inlineHelpText>Only Allow Validated Shipments (FedEx)</inlineHelpText>
        <label>Only Allow Validated Shipments (FedEx)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__RecordPrintHistories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Print Histories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__RecordShippingCheckpoints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Shipping Checkpoints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Run_Demo_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Demo Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduledTrackingNumberOfDays__c</fullName>
        <defaultValue>180</defaultValue>
        <label>Scheduled tracking - number of days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__SplitStreetLineByComma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Street Line 1 by comma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__UPS_Generate_Custom_HazMat_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPS Generate Custom HazMat Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__USPSTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USPS Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__USPSWebAPIUserID__c</fullName>
        <label>USPS Web API UserID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UpdateShipmentFieldsFromTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Shipment Fields From Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__UseFiles__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Save labels to Salesforce File</description>
        <label>Use Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__UseListRates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Show FedEx List Rates</label>
        <type>Checkbox</type>
    </fields>
    <label>Zenkraft General Settings (Deprecated)</label>
</CustomObject>